releases/capstone-ingress/nlb.yaml
kind: Service
apiVersion: v1
metadata:
  name: capstone-nlb-ingress
  namespace: capstone-ingress
  labels:
    app: nginx-ingress
    component: controller
    release: nginx-controller
  annotations:
    # by default the type is elb (classic load balancer).
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  # this setting is to make sure the source IP address is preserved.
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: nginx-ingress
    component: controller
    release: nginx-controller
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
