releases/capstone-ingress/capstone-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: capstone-ingress
  namespace: capstone-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /capstone(/|$)(.*)
            backend:
              #TODO: Cache invalidation when switching. Index.html is cached aparently.
              serviceName: capstone-service-proxy-blue
              servicePort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: capstone-service-proxy-blue
  namespace: capstone-ingress
spec:
  type: ExternalName
  externalName: capstone-service-prod-blue.capstone-prod-blue.svc.cluster.local
  ports:
    - port: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: capstone-service-proxy-green
  namespace: capstone-ingress
spec:
  type: ExternalName
  externalName: capstone-service-prod-green.capstone-prod-green.svc.cluster.local
  ports:
    - port: 8080
